# DeepWorks

./: .gitignore  README.md
12-Research-Papers/: README.md
AllThings-VQGAN/: README.md
AwesomeOfAwsome/: AutonomousDriving.md  DeepLearningFrameworks.md  DeepLearningProjects.md  README.md
Bloom-BigScience/: Bloom_BigScience_Experiment.ipynb  README.md
BrainComputerInterface/: README.md
CMDLine-Whisper/: OpenAI_Whisper.ipynb
ChatGPT/: DeepLearningMindmap.md  FineTuneLLM.md  LLM.md  LangChainOpenAI.md  README.md  Whiteboarding-ChatGPT-Intro.md  Whiteboarding-LLM-TechStack.md  deeplearning-study-mindmap.txt
ConvolutionOnImageDemo/: Convolution_Filter_Live.ipynb  README.md
DL-SatelliteImagery/: README.md  Satellite_Imagery_DeepLearning-Base.ipynb  Satellite_Imagery_DeepLearning-LocalDiag.ipynb  Satellite_Imagery_DeepLearning-SaveLoadModel.ipynb  Satellite_Imagery_DeepLearning-WandB.ipynb  Satellite_Imagery_DeepLearning_ActivationHeatmap.ipynb  Satellite_Imagery_Segmentation.ipynb  Satellite_segmentation_Prediction-Base.ipynb  Satellite_segmentation_Prediction-GradioUI.ipynb
DallE-mini/: Dall_E_Mini.ipynb  README.md
DatasetRamp/: README.md
DeepLearningRig/: README.md
DeepViz/: README.md
DeeplearningWithMetal/: README.md
DeveloperProgram/: PythonClasses.md  README.md
DeveloperProgram/PythonModule/ramputils_full/: LICENSE  README.md  pyproject.toml  setup.py
DeveloperProgram/PythonModule/ramputils_full/src/ramputils/: api.py
DiffusionModels/: Dreamix-DiffusionMixVideoEditing.md  Forward_Reverse_Diffusion.ipynb  README.md  (+1 more)
EG3D/: README.md
(+132 files in other folders)
