[project]
name = "ramputils_prodramp"
version = "0.0.1"
authors = [
  { name="Prodramp Team", email="avkash@prodramp.com" },
]
description = "A small demo utiltiy"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/prodramp/DeepWorks/tree/main/DeveloperProgram/PythonModule"
"Bug Tracker" = "https://github.com/prodramp/DeepWorks/tree/main/DeveloperProgram/PythonModule"